--- a/VCIMPQuote/app/src/main/res/layout/activity_quote_detail.xml
+++ b/VCIMPQuote/app/src/main/res/layout/activity_quote_detail.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt1"
                 android:layout_width="match_parent"
@@ -279,6 +280,40 @@
                     </TableLayout>
                 </ScrollView>
             </HorizontalScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtToCapital"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:inputType="text"
+                    android:padding="6sp"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/txtToInterest"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:inputType="text"
+                    android:padding="6sp"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/txtPayToBank"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:inputType="text"
+                    android:padding="6sp"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
